--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "element-react": "^1.4.34",
     "element-theme-default": "^1.4.13",
     "i18next": "^20.3.0",
-    "node-sass": "^4.13.0",
+    "sass": "^1.69.0",
     "query-string": "^6.13.1",
-    "react": "^16.12.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.12.0",
+    "react": "^16.8.0",
+    "react-transition-group": "^4.4.5",
+    "react-dom": "^16.8.0",
     "react-hot-loader": "^4.12.19",
     "react-i18next": "^11.9.0",
     "react-router-dom": "^5.1.2",
@@ -20,7 +20,7 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
