--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ rlcard[torch]
 Django
 tqdm
 django-cors-headers
-flask==1.1
-flask-cors
+flask==1.1.4
+flask-cors==3.0.10
+jinja2<3.0.0
+markupsafe<2.1.0
+itsdangerous<2.0
+werkzeug<2.0.0
 onnx
 onnxruntime
 
